<resources>
    <string name="app_name">Monitor SP</string>
    <string name="app_name_toolbar">MONITOR STACJI \nPOMIAROWEJ</string>
    <string name="preview_button_title">PODGLĄD</string>
    <string name="devices_button_title">URZĄDZENIA</string>
    <string name="statistics_button_title">STATYSTYKI</string>
    <string name="config_button_title">USTAWIENIA</string>
    <string name="login_button_title">ZALOGUJ</string>
    <string name="register_button_title">ZAREJESTRUJ</string>
    <string name="login_field_hint">LOGIN</string>
    <string name="password_field_title">HASŁO</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="log_out_alert_message">Czy na pewno chcesz się wylogować?</string>
    <string name="log_out_alert_title">Wyloguj</string>
    <string name="log_in_success">Zalogowano pomyślnie!</string>
    <string name="register_success">Zarejestrowano pomyślnie!</string>
    <string name="repeat_password_field_title">POWTÓRZ HASŁO</string>
    <string name="wait">Czekaj...</string>
    <string name="logging_in">Trwa logowanie</string>
    <string name="add_device_button_title">Dodaj urządzenie</string>
    <string name="device_serial_number_field_title">Kod seryjny</string>
    <string name="device_name_field_title">Nazwa urządzenia</string>
    <string name="add_device_success">Urządzenie dodano pomyślnie!</string>
    <string name="add_measurement_type_button_title">DODAJ TYP POMIARU</string>
    <string name="measurement_type_name_field_title">Nazwa</string>
    <string name="measurement_type_code_field_title">Kod</string>
    <string name="measurement_type_unit_field_title">Jednostka</string>
    <string name="measurement_type_bottom_critical_bound_field_title">Dolna granica</string>
    <string name="measurement_type_top_critical_bound_field_title">Górna granica</string>
    <string name="add_measurement_type_success">Typ pomiaru dodano pomyślnie!</string>
    <string name="no_implementation_info">BRAK IMPLEMENTACJI \nFUNKCJONALNOŚCI</string>
    <string name="pick_device_text_label">URZĄDZENIE</string>
    <string name="pick_measurement_type_label">TYP POMIARU</string>
    <string name="invalid_bound_values_input">Wprowadzono błędne wartości graniczne!</string>
    <string name="lack_of_input_data_error">Nie uzupełniono wszystkich wymaganych pól!</string>
    <string name="add_mesurement_type_toolbar_title">DODAJ TYP POMIARU</string>
</resources>
