<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/measurementTypeNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/measurement_type_name_field_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/measurementTypeCodeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/measurement_type_code_field_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/measurementTypeUnitField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/measurement_type_unit_field_title"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/measurementBottomCriticalBoundField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/measurement_type_bottom_critical_bound_field_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/measurementTopCriticalBoundField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/measurement_type_top_critical_bound_field_title"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/addMeasurementTypeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_measurement_type_button_title" />
</LinearLayout>